# hal-backend-ml-accelerator

./: CMakeLists.txt  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: gbs_build.yml  tizen.gbs.conf
packaging/: hal-backend-ml-accelerator.spec  hal-backend-ml.spec
src/: hal-backend-ml-dummy-passthrough.cc  hal-backend-ml-snpe.cc  hal-backend-ml-test-passthrough.cc  hal-backend-ml-util.cc  hal-backend-ml-util.h  hal-backend-ml-vivante.cc  nnstreamer_plugin_api_filter.h  tensor_typedef.h
test/: CMakeLists.txt  hal_backend_ml_dummy_passthrough_test.cc  hal_backend_ml_snpe_test.cc  hal_backend_ml_test_util.cc  hal_backend_ml_test_util.h  hal_backend_ml_test_wrapper.h  hal_backend_ml_vivante_test.cc  main.cpp
test/res/: sample_snpe_test_config.json  sample_vivante_test_config.json
